utilities/stringify_attr/src/tests/derive/no_attrs.stderr
error: Expected an outer attribute in a list format
  --> $DIR/no_attrs.rs:20:11
   |
20 |         #[stringify]
   |           ^^^^^^^^^
